*** Changelog ***

= 8.1.0 - xxxx-xx-xx =
* Fix - Incorrect payment amount sent to Stripe when using three-decimal currencies.
* Tweak - Update the Stripe JS library to 1.36.0.
* Fix - PHP 8.2 deprecation warnings within the WC_Stripe_UPE_Payment_Method class.
* Fix - Resolved an issue with saving plugin settings when bank descriptor value is invalid.
* Add - Include Stripe API version in logs.
* Fix - Issue with rendering Sepa on checkout page when card is disabled in non-UPE mode.
* Tweak - Removed the "Early Access" pill and "Disable" option from the Stripe payment methods dropdown menu.
* Tweak - Remove unused UPE title field.
* Fix - Resolved an issue in processing subscription payments with currencies not supported for mandate data.
* Add - Enable the updated checkout experience (UPE) by default for new accounts.
* Tweak - Add WooCommerce as a plugin dependency
* Fix - Resolved an issue with subscription when attaching customers directly without 3DS due to Indian payment regulations.

= 8.0.1 - 2024-03-13 =
* Fix - Resolved failing card payments when `statement_descriptor` parameter is used.

= 8.0.0 - 2024-02-29 =
* Add - Implement deferred payment intents for the Payment Element (or UPE), used on the updated checkout experience.
* Add - Implement split Payment Elements (or split UPE), splitting the payment method types under the updated checkout experience into different gateways.
* Add - Update the interface for customizing Stripe payment methods.
* Fix - When toggling on the Stripe gateway from the payment methods list, don't incorrectly redirect the merchant to Stripe settings when test mode is enabled.
* Fix - Hiding the expandable menu for UPE entirely when the feature is disabled.
* Fix - Critical error when deactivating the extension after deactivating WooCommerce.
* Fix - Add missing fee and payout information to the order details page in admin.
* Fix - Hiding "Early Access" label and "Refresh payment methods" button when UPE is disabled.